# ThermaCoreApp

./: .dockerignore  .env.example  .env.production  .env.test  .gitignore  .pre-commit-config.yaml  ADMIN_PANEL_USER_CREATION_IMPLEMENTATION.md  APIFETCH_ERROR_HANDLING_FIX.md  API_DIAGNOSTICS_GUIDE.md  API_TESTING_INDEX.md  APPLICATION_TESTING_REPORT.md  APP_IMPROVEMENT_TASKS_PR_DESCRIPTION.md  AUTHENTICATION_500_ERROR_FIX.md  AUTHENTICATION_500_ROOT_CAUSE_ANALYSIS.md  AUTHENTICATION_FIX_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_FIX_PACKAGE_OVERVIEW.md  AUTHENTICATION_INTEGRATION_SUMMARY.md  AUTHENTICATION_REFACTORING_COMPLETE.md  AUTH_ENDPOINT_IMPROVEMENTS_SUMMARY.md  AUTH_IMPROVEMENTS_QUICK_REFERENCE.md  AUTH_STATUS_SUMMARY.txt  BACKEND_AUTH_STATUS_REPORT.md  BATCH_1_2_IMPLEMENTATION.md  BEFORE_AFTER_COMPARISON.md  BIOME_MIGRATION.md  BLANK_PAGE_DIAGNOSIS_REPORT.md  BLANK_PAGE_FIX_COMPLETE.md  BLANK_PAGE_FIX_SUMMARY.md  BLANK_PAGE_RENDERING_FIX_SUMMARY.md  BLUEPRINT_REGISTRATION_FIX.md  CACHING_PERFORMANCE_SECURITY_QUICK_REFERENCE.md  CACHING_PERFORMANCE_SECURITY_SUMMARY.md  CODE_REVIEW_IMPROVEMENTS.md  COMPLETE_TEST_FIXES_SUMMARY.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  CORS_SECURITY_FIX_SUMMARY.md  DATABASE_INITIALIZATION_SUMMARY.md  DEBUG_ENDPOINTS_USAGE.md  DEBUG_MODE_TEST_FIX_SUMMARY.md  (+199 more)
.github/: dependabot.yml
app/: db.py
backend/: .bandit  .dockerignore  .env.example  .gitignore  AUTHENTICATION_REFACTORING_SUMMARY.md  BACKEND_TEST_FIXES.md  CERTIFICATE_GENERATION_DEPLOYMENT.md  CHANGES_VISUAL.md  CONFTEST_DEBUG_IMPROVEMENTS.md  CORS_SECURITY_IMPROVEMENTS.md  DATETIME_CONFIG_IMPROVEMENTS_SUMMARY.md  DEBUG_OUTPUT_EXAMPLES.md  DNP3_OPTIMIZATION_DOCUMENTATION.md  DNP3_OPTIMIZATION_IMPLEMENTATION_V1_1_0.md  DNP3_PERFORMANCE_OPTIMIZATION_GUIDE.md  DNP3_SECURITY_COMPLIANCE_GUIDE.md  Dockerfile  EMERGENCY_FIX_SUMMARY.md  EMERGENCY_USER_APPROVAL.md  PHASE2_FIX_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PRODUCTION_CONFIG_REFACTORING.md  RBAC_COVERAGE_DOCUMENTATION.md  README.md  README_BATCH_3_IMPLEMENTATION.md  REVIEW_IMPLEMENTATION_SUMMARY.md  SANITIZATION_MIDDLEWARE.md  SECRET_MANAGEMENT_DOCUMENTATION.md  SECURE_LOGGING_IMPLEMENTATION.md  SECURITY_BEST_PRACTICES.md  SECURITY_IMPROVEMENTS_COMPLETE.md  VALIDATION_AND_ERROR_HANDLING.md  apply_migrations.sh  bandit_phase7_report.json  bandit_report.txt  bandit_sarif.json  config.py  coverage.json  (+44 more)
backend/app/: __init__.py  blueprint_registration.py  branch_reduction.py  config_init.py  exceptions.py  function_decomposition.py  health_check_helpers.py  logging_config.py  parameter_grouping.py  refactor_helpers.py  security_utils.py  service_init.py
backend/app/middleware/: __init__.py  audit.py  authorization.py  client_isolation.py  metrics.py  rate_limit.py  request_id.py  tenant.py  validation.py
backend/app/models/: __init__.py
backend/app/protocols/: __init__.py  base.py  registry.py
backend/app/routes/: analytics.py  auth.py  auth_helpers.py  clients.py  examples.py  health.py  historical.py  multiprotocol.py  opcua_monitoring.py  remote_control.py  scada.py  services.py  tenants.py  units.py  users.py
backend/app/services/: __init__.py  anomaly_detection.py  data_storage_service.py  dnp3_service.py  dnp3_service.py.backup  email_service.py  modbus_service.py  mqtt_service.py  opcua_service.py  protocol_gateway_simulator.py  realtime_processor.py  secure_opcua_client.py  secure_opcua_wrapper.py  websocket_service.py
backend/app/tests/: conftest.py  conftest.py.backup  test_analytics_routes.py  test_anomaly_detection.py  test_api_endpoints.py  test_approval_workflow.py  test_audit_logging.py  test_auth.py  test_auth_flows.py  test_authorization_middleware.py  test_auto_migration.py  test_batch_10_17_improvements.py  test_branch_reduction.py  test_centralized_validation.py  test_certificate_generation.py  test_certificate_timezone_improvements.py  test_client_isolation.py  test_company_identifier.py  test_datetime_field.py  test_datetime_improvements.py  test_deployment_fixes.py  test_dnp3_cache_optimization.py  test_dnp3_performance.py  test_dnp3_service.py  test_email_service.py  test_emergency_admin.py  test_emergency_user_approval.py  test_enhanced_permissions.py  test_enhanced_secure_logger.py  test_enhanced_user_management.py  test_error_message_security.py  test_error_propagation_improvements.py  test_error_recovery.py  test_examples_routes.py  test_exceptions.py  test_function_decomposition.py  test_health_api.py  test_health_check.py  test_health_endpoint.py  test_helpers.py  (+78 more)
backend/app/utils/: auto_migration.py  company_identifier.py  db_retry.py  environment.py  error_handler.py  helpers.py  input_validator.py  logging_filter.py  migration_constants.py  schemas.py  secure_logger.py  service_manager.py  status_utils.py  user_batch_manager.py  user_permissions_fix.py  validation.py
backend/benchmarks/: README.md  critical_path_benchmark.py  protocol_performance.py
backend/instance/: .gitkeep
backend/migrations/: 001_initial_schema.sql  001_initial_schema_sqlite.sql  002_seed_data.sql  003_update_rbac_security.sql  004_fix_null_roles.sql  005_add_password_reset_fields.sql  005_fix_password_hash_length.sql  006_add_emergency_admin_permissions.sql  006_add_emergency_admin_permissions_sqlite.sql  007_add_user_profile_fields.sql  007_add_user_profile_fields_sqlite.sql  008_add_user_profile_fields_comprehensive.sql  009_add_user_approval_columns.sql  009_add_user_approval_columns_sqlite.sql  009_add_user_approval_workflow.sql  009_add_user_approval_workflow_sqlite.sql  README_PASSWORD_HASH_MIGRATION.md  add_multi_tenancy.py  add_user_approval_columns.py
backend/scripts/: create_first_admin.py  generate_docs.py  performance_tests.py  production_readiness.py  run_enterprise_validation.sh  run_performance_tests.sh  static_analysis_suite.py  verify_approval_workflow.py  verify_user_schema.py
dev_tools/: README.md
docs/: API_Documentation.md  API_REFERENCE.md  Architecture_Overview.md  BACKUP_RECOVERY.md  CHANGELOG.md  Code_Style_Guidelines.md  FAQ.md  (+20 more)
(+511 files in other folders)
