[metadata]
name = thermacore
version = 1.0.0
description = ThermaCore SCADA Platform
author = ThermaCore Team
requires-python = >=3.10

[tool:pytest]
testpaths = app/tests
python_files = test_*.py
python_functions = test_*
python_classes = Test*
addopts = 
    -v
    --tb=short
    --strict-markers
    --disable-warnings
    --color=yes

[coverage:run]
source = app
omit = 
    app/tests/*
    venv/*
    */venv/*
    */migrations/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError